--- a/📔Notes/4. JavaScript Notes.md
+++ b/📔Notes/4. JavaScript Notes.md
@@ -4,7 +4,7 @@
 
 **JavaScript** is a high-level, interpreted programming language that is primarily used to make web pages interactive. It is one of the core technologies of the web, alongside **HTML** and **CSS**.
 
-## Key Features:
+### Key Features:
 
 - **Client-side scripting**: JavaScript runs in the browser, allowing dynamic changes to content, form validation, interactive maps, animations, and more.
 
@@ -16,7 +16,7 @@
 
 - **Runs everywhere**: Supported by all modern web browsers without needing additional plugins.
 
-## Common Uses:
+### Common Uses:
 
 - Updating content dynamically without reloading the page (AJAX)
 
@@ -98,12 +98,12 @@ let big = 123456789012345678901234567890n; // BigInt
 ### 2. Reference (Object) Data Types
 These hold **collections of values** or more **complex structures**.
 
-|Type|Example|Description|
-|---|---|---|
-|`Object`|`{ name: "Alice", age: 30 }`|Key-value pairs|
-|`Array`|`[1, 2, 3]`|Ordered list|
-|`Function`|`function() {}`|Reusable block of code|
-|`Date`|`new Date()`|Date and time|
+| Type       | Example                      | Description            |
+| ---------- | ---------------------------- | ---------------------- |
+| `Object`   | `{ name: "Alice", age: 30 }` | Key-value pairs        |
+| `Array`    | `[1, 2, 3]`                  | Ordered list           |
+| `Function` | `function() {}`              | Reusable block of code |
+| `Date`     | `new Date()`                 | Date and time          |
 
 #### ✅ Examples:
 
@@ -188,7 +188,6 @@ parseFloat("3.14");  // 3.14
 ```
 
 #### 🔢 BigInt (for large numbers)
-
 If you need to work with very large integers beyond `2^53 - 1`:
 
 ```javascript
@@ -278,16 +277,16 @@ Or by using double NOT:
 
 #### Boolean Logic Operators:
 
-|Operator|Name|Example|Result|
-|---|---|---|---|
-|`&&`|AND|`true && false`|`false`|
-|`||`|OR|
-|`!`|NOT|`!true`|`false`|
+| Operator | Name | Example          | Result  |
+| -------- | ---- | ---------------- | ------- |
+| `&&`     | AND  | `true && false`  | `false` |
+| \| \|    | OR   | true \| \| false | `true`  |
+| `!`      | NOT  | `!true`          | `false` |
 
 ---
 
 ### Strings
-In **JavaScript**, a **string** is a sequence of **characters** (letters, numbers, symbols, etc.) used to represent **text**.
+In **JavaScript**, a **string** is a sequence of **characters** (letters, numbers, symbols, etc.) used to represent **text**. Strings are **immutable** in nature.
 
 #### How to Declare Strings
 You can create strings using:
@@ -349,17 +348,19 @@ console.log(word.charAt(10)); // "" (empty string)
 ```
 
 #### Common String Methods
+We can chain multiple methods together. i.e `string.method1().method()`
 
-|Method|Description|Example|
-|---|---|---|
-|`length`|Returns the length|`"Hi".length → 2`|
-|`toUpperCase()`|Converts to uppercase|`"hello".toUpperCase()` → `"HELLO"`|
-|`toLowerCase()`|Converts to lowercase|`"Hi".toLowerCase()` → `"hi"`|
-|`includes()`|Checks if substring exists|`"apple".includes("pp")` → `true`|
-|`indexOf()`|Finds position of a substring|`"cat".indexOf("a")` → `1`|
-|`slice(start, end)`|Extracts part of string|`"hello".slice(1, 4)` → `"ell"`|
-|`replace()`|Replaces part of string|`"hello".replace("h", "y")` → `"yello"`|
-|`trim()`|Removes whitespace from ends|`" hi ".trim()` → `"hi"`|
+| Method              | Description                    | Example                                 |
+| ------------------- | ------------------------------ | --------------------------------------- |
+| `length`            | Returns the length             | `"Hi".length → 2`                       |
+| `toUpperCase()`     | Converts to uppercase          | `"hello".toUpperCase()` → `"HELLO"`     |
+| `toLowerCase()`     | Converts to lowercase          | `"Hi".toLowerCase()` → `"hi"`           |
+| `includes()`        | Checks if substring exists     | `"apple".includes("pp")` → `true`       |
+| `indexOf()`         | Finds position of a substring  | `"cat".indexOf("a")` → `1`              |
+| `slice(start, end)` | Extracts part of string        | `"hello".slice(1, 4)` → `"ell"`         |
+| `replace()`         | Replaces part of string        | `"hello".replace("h", "y")` → `"yello"` |
+| `trim()`            | Removes whitespace from ends   | `" hi ".trim()` → `"hi"`                |
+| `repeat()`          | Repeat a string multiple times | `"hi.repeat(3)"` → `"hihihi"`           |
 
 #### Looping Through a String
 
@@ -439,6 +440,337 @@ undefined === null    // false (strict equality)
 - Use `null` when **you decide** a value is currently empty or to **clear/reset** something.
 
 ---
+## Reference Datatypes
+
+### Arrays
+In JavaScript, **arrays** are a special type of object used to store ordered collections of values. They can hold elements of any type, including numbers, strings, objects, other arrays, etc.
+
+#### Declaring an Array
+
+```javascript
+let fruits = ['apple', 'banana', 'cherry'];
+let numbers = [1, 2, 3, 4, 5];
+let mixed = [1, 'hello', true, null];
+let empty = [];
+```
+
+You can also create arrays using the `Array` constructor:
+
+```javascript
+let arr = new Array(5); // creates an empty array with length 5
+```
+
+#### Accessing Array Elements
+
+```javascript
+let colors = ['red', 'green', 'blue'];
+console.log(colors[0]); // 'red'
+console.log(colors[2]); // 'blue'
+```
+
+#### Common Array Methods
+
+- `length` - Print the length of array
+	 
+```javascript
+let arr = [1, 2, 3];
+let len = arr.length; // 3
+``` 
+
+-  `push()` – Add to end
+	
+```javascript
+let arr = [1, 2];
+arr.push(3); // [1, 2, 3]
+```
+
+-  `pop()` – Remove from end
+	
+```javascript
+let arr = [1, 2, 3];
+arr.pop(); // returns 3; arr is now [1, 2]
+```
+
+-  `shift()` – Remove from start
+	
+```javascript
+let arr = [1, 2, 3];
+arr.shift(); // returns 1; arr is now [2, 3]
+```
+
+-  `unshift()` – Add to start
+	
+```javascript
+let arr = [2, 3];
+arr.unshift(1); // [1, 2, 3]
+```
+
+-  `splice()` – Add/Remove at index
+	
+```javascript
+let languages = ["C++", "Java", "JavaScript"];
+
+let sliced = languages.splice(2); // Slicing with main array deletion.
+console.log(sliced); // ["JavaScript"]
+console.log(languages);	// ["C++", "Java"]
+
+languages.splice(2, 0, "Rust", "Python"); // Adding/deleting at last (push, pop)
+console.log(languages); // ["C++", "Java", "Rust", "Python"]
+
+languages.splice(0, 0, "javaScript"); // Adding/deleting at first (unshift, shift)
+console.log(languages); // ["JavaScript", "C++", "Java", "Rust", "Python"]
+
+languages.splice(3, 1, "C"); // Replacing any element
+console.log(languages); // ["JavaScript", "C++", "Java", "C", "Python"]
+
+languages.splice(2, 0, "TypeScript", "Go"); // Adding in middle of array
+console.log(languages); // ["JavaScript", "C++", "Go", "Java", "C", "Python"]
+```
+
+-  `slice()` – Get part of array
+	
+```javascript
+let allColors = ["red", "yellow", "blue", "violet", "pink", "white"]
+
+console.log("array.slice(starting_index, ending_index)");
+
+console.log(allColors.slice()); 
+// ["red", "yellow", "blue", "violet", "pink", "white"];
+// a copy of the full array
+
+console.log(allColors.slice(1, 4)); 
+// ["yellow", "blue", "violet"]
+// 4th index doesn't include. (a copy of 1st to 3rd index)
+
+console.log(allColors.slice(5));
+// ["white"]
+// ending_index = array.length.
+
+console.log(allColors.slice(-3)); 
+// ["violet", "pink", "white"]
+// starting_index = array.length - 3 & ending_index = array.length.
+
+console.log(allColors.slice(100)); 
+// insufficient indices returns empty array
+```
+
+-  `indexOf()` – Find index of value
+	
+```javascript
+let arr = ['a', 'b', 'c'];
+arr.indexOf('b'); // 1
+```
+
+-  `includes()` – Check if exists
+	
+```javascript
+let arr = [1, 2, 3];
+arr.includes(2); // true
+arr.includes(4); // false
+```
+
+-  `forEach()` – Loop through elements
+	
+```javascript
+let arr = [1, 2, 3];
+arr.forEach(num => {
+  console.log(num * 2); // 2, 4, 6
+});
+```
+
+-  `map()` – Transform elements
+	
+```javascript
+let arr = [1, 2, 3];
+let doubled = arr.map(n => n * 2); // [2, 4, 6]
+```
+
+-  `filter()` – Keep elements that match condition
+	
+```javascript
+let arr = [1, 2, 3, 4];
+let evens = arr.filter(n => n % 2 === 0); // [2, 4]
+```
+
+-  `reduce()` – Reduce to single value
+	
+```javascript
+let arr = [1, 2, 3, 4];
+let sum = arr.reduce((acc, curr) => acc + curr, 0); // 10
+```
+
+-  `join()` – Combine elements into string
+	
+```javascript
+let arr = ['a', 'b', 'c'];
+arr.join('-'); // "a-b-c"
+```
+
+-  `sort()` – Sort elements (as strings by default)
+	
+```javascript
+let arr = [3, 1, 4, 2];
+arr.sort(); // [1, 2, 3, 4] (numbers may not sort as expected without a compare function)
+
+let names = ['Zoe', 'Adam', 'John'];
+names.sort(); // ['Adam', 'John', 'Zoe']
+```
+	
+   | Custom sort:
+	
+```javascript
+arr.sort((a, b) => a - b); // numeric sort ascending
+```
+
+-  `reverse()` – Reverse the array
+	
+```javascript
+let arr = [1, 2, 3];
+arr.reverse(); // [3, 2, 1]
+```
+
+#### Array References
+In JavaScript, arrays are **reference types**, which means when you assign an array to another variable or pass it into a function, you're passing a **reference to the same array in memory**, not a copy of the array.
+
+##### ✅ **Example: Array Reference Behavior**
+
+```javascript
+let arr1 = [1, 2, 3];
+let arr2 = arr1;
+
+arr2[0] = 99;
+
+console.log(arr1); // [99, 2, 3]
+console.log(arr2); // [99, 2, 3]
+```
+
+**Why?** Because `arr2 = arr1` creates a reference to the same array in memory. Modifying `arr2` also modifies `arr1`.
+
+##### 🙅 **How to Copy an Array (Avoid Reference)**
+If you want to copy an array instead of referencing it:
+
+1. **Spread Operator**
+	
+```javascript
+let arr1 = [1, 2, 3];
+let arr2 = [...arr1];
+arr2[0] = 99;
+
+console.log(arr1); // [1, 2, 3]
+```
+
+2. **`slice()` Method**
+	
+```javascript
+let arr2 = arr1.slice();
+```
+
+3. **`Array.from()`**
+	
+```javascript
+let arr2 = Array.from(arr1);
+```
+
+4. **`concat()`**
+	
+```javascript
+let arr2 = [].concat(arr1);
+```
+
+##### 📝 **Deep vs Shallow Copy**
+All the methods above create a **shallow copy**—they copy the top-level elements. If the array contains objects or other arrays, their references will still be shared.
+
+```javascript
+let arr1 = [{ a: 1 }];
+let arr2 = [...arr1];
+
+arr2[0].a = 99;
+
+console.log(arr1); // [{ a: 99 }] — shared reference to the object
+```
+
+To avoid this, you need a **deep copy**, often done with:
+
+```javascript
+let arr2 = JSON.parse(JSON.stringify(arr1)); // simple but limited method
+```
+
+Or using libraries like Lodash:
+
+```javascript
+let arr2 = _.cloneDeep(arr1);
+```
+
+#### Nested Arrays in JavaScript
+
+In JavaScript, **nested arrays** are arrays that contain other arrays as elements. This is commonly used to represent **matrices**, **grids**, or **tree-like data structures**.
+
+##### ✅ **Basic Example**
+
+```javascript
+let nestedArray = [
+  [1, 2, 3],
+  [4, 5, 6],
+  [7, 8, 9]
+];
+
+console.log(nestedArray[0]);    // [1, 2, 3]
+console.log(nestedArray[0][1]); // 2
+```
+
+##### 🔄 **Looping Through a Nested Array**
+
+```javascript
+for (let i = 0; i < nestedArray.length; i++) {
+  for (let j = 0; j < nestedArray[i].length; j++) {
+    console.log(`Element at [${i}][${j}]:`, nestedArray[i][j]);
+  }
+}
+```
+
+Or using `forEach`:
+
+```javascript
+nestedArray.forEach((row, i) => {
+  row.forEach((value, j) => {
+    console.log(`Element at [${i}][${j}]:`, value);
+  });
+});
+```
+
+##### ✏️ **Modifying Nested Array Values**
+
+```javascript
+nestedArray[1][2] = 99;
+console.log(nestedArray); // [[1, 2, 3], [4, 5, 99], [7, 8, 9]]
+```
+
+##### 🔍 **Flattening a Nested Array**
+
+1. One Level Deep
+	
+```javascript
+let flat = nestedArray.flat();
+console.log(flat); // [1, 2, 3, 4, 5, 99, 7, 8, 9]
+```
+
+2. Deeply Nested Example
+	
+```javascript
+let deepNested = [1, [2, [3, [4]]]];
+let flatAll = deepNested.flat(Infinity);
+console.log(flatAll); // [1, 2, 3, 4]
+```
+
+##### 🧠 **Use Cases**
+
+- **Matrices:** `matrix[row][col]`
+
+- **Game Boards:** `board[y][x]`
+
+- **Hierarchical Data:** Nested lists or trees
+
+---
 
 ## Keywords in JavaScript
 In **JavaScript**, **keywords** are **reserved words** that have special meaning in the language. You **cannot use them as variable names**, function names, or identifiers.
@@ -452,13 +784,13 @@ In **JavaScript**, **keywords** are **reserved words** that have special meaning
 |   ✅   | `const`      | Declares a block-scoped constant                     | `const PI = 3.14;`              |
 |       | `function`   | Declares a function                                  | `function greet() {}`           |
 |       | `return`     | Returns a value from a function                      | `return x + y;`                 |
-|       | `if`         | Starts a conditional block                           | `if (x > 5) { ... }`            |
-|       | `else`       | Specifies code to run if `if` condition is false     | `else { ... }`                  |
-|       | `switch`     | Conditional selection among multiple cases           | `switch(x) { case 1: ... }`     |
+|   ✅   | `if`         | Starts a conditional block                           | `if (x > 5) { ... }`            |
+|   ✅   | `else`       | Specifies code to run if `if` condition is false     | `else { ... }`                  |
+|   ✅   | `switch`     | Conditional selection among multiple cases           | `switch(x) { case 1: ... }`     |
 |       | `case`       | Defines a condition in a `switch` block              | `case 2: break;`                |
-|       | `break`      | Exits a loop or switch                               | `break;`                        |
+|   ✅   | `break`      | Exits a loop or switch                               | `break;`                        |
 |       | `continue`   | Skips to the next loop iteration                     | `continue;`                     |
-|       | `for`        | Starts a loop                                        | `for (let i = 0; i < 5; i++)`   |
+|   ✅   | `for`        | Starts a loop                                        | `for (let i = 0; i < 5; i++)`   |
 |       | `while`      | Starts a loop that continues while condition is true | `while (i < 5) { ... }`         |
 |       | `do`         | Like `while`, but runs at least once                 | `do { ... } while (i < 5);`     |
 |       | `try`        | Starts a block to test for errors                    | `try { ... }`                   |
@@ -468,7 +800,7 @@ In **JavaScript**, **keywords** are **reserved words** that have special meaning
 |       | `class`      | Declares a class                                     | `class Car {}`                  |
 |       | `new`        | Creates an instance of an object                     | `new Date()`                    |
 |       | `this`       | Refers to the current object                         | `this.name`                     |
-|  ✅    | `typeof`     | Returns the type of a variable                       | `typeof "hello"`                |
+|   ✅   | `typeof`     | Returns the type of a variable                       | `typeof "hello"`                |
 |       | `delete`     | Deletes an object property                           | `delete obj.name;`              |
 |       | `in`         | Checks if property exists in object                  | `"name" in obj`                 |
 |       | `instanceof` | Checks if object is an instance of a class           | `obj instanceof Car`            |
@@ -539,11 +871,11 @@ In **JavaScript**, **operators** are symbols used to **perform operations** on v
 
 #### 4. Logical Operators
 
-| Operator | Meaning     | Example         | Result     |        |   |         |        |
-| -------- | ----------- | --------------- | ---------- | ------ | - | ------- | ------ |
-| `&&`     | Logical AND | `true && false` | `false`    |        |   |         |        |
-| \`       |             | \`              | Logical OR | \`true |   | false\` | `true` |
-| `!`      | Logical NOT | `!true`         | `false`    |        |   |         |        |
+| Operator | Meaning     | Example          | Result  |
+| -------- | ----------- | ---------------- | ------- |
+| `&&`     | Logical AND | `true && false`  | `false` |
+| \| \|    | Logical OR  | true \| \| false | `true`  |
+| `!`      | Logical NOT | `!true`          | `false` |
 
 #### 5. String Concatenation
 
@@ -571,24 +903,24 @@ x instanceof Array;    // true or false
 
 > Think of it like **math rules**: `()` comes before `*`, which comes before `+`.
 
-#### Precedence Table (high to low)
+#### 📊 Precedence Table (high to low)
 
-| Precedence | Operator (s)              | Type            |     |     |
-| ---------- | ------------------------- | --------------- | --- | --- |
-| 20         | `()`                      | Grouping        |     |     |
-| 17         | `new`, `super`            | Object creation |     |     |
-| 16         | `++`, `--` (postfix)      | Increment       |     |     |
-| 15         | `!`, `++`, `--`, `typeof` | Unary           |     |     |
-| 14         | `**`                      | Exponentiation  |     |     |
-| 13         | `*`, `/`, `%`             | Multiply, etc.  |     |     |
-| 12         | `+`, `-`                  | Add/Subtract    |     |     |
-| 11         | `<<`, `>>`, `>>>`         | Bitwise shifts  |     |     |
-| 10         | `<`, `<=`, `>`, `>=`      | Comparison      |     |     |
-| 9          | `==`, `!=`, `===`, `!==`  | Equality        |     |     |
-| 6          | `&&`                      | Logical AND     |     |     |
-| 5          | \`                        | Logical OR      |     |     |
-| 4          | `? :`                     | Ternary         |     |     |
-| 3          | `=`, `+=`, `-=` etc.      | Assignment      |     |     |
+| Precedence | Operator (s)              | Type            |
+| ---------- | ------------------------- | --------------- |
+| 20         | `()`                      | Grouping        |
+| 17         | `new`, `super`            | Object creation |
+| 16         | `++`, `--` (postfix)      | Increment       |
+| 15         | `!`, `++`, `--`, `typeof` | Unary           |
+| 14         | `**`                      | Exponentiation  |
+| 13         | `*`, `/`, `%`             | Multiply, etc.  |
+| 12         | `+`, `-`                  | Add/Subtract    |
+| 11         | `<<`, `>>`, `>>>`         | Bitwise shifts  |
+| 10         | `<`, `<=`, `>`, `>=`      | Comparison      |
+| 9          | `==`, `!=`, `===`, `!==`  | Equality        |
+| 6          | `&&`                      | Logical AND     |
+| 5          | \| \|                     | Logical OR      |
+| 4          | `? :`                     | Ternary         |
+| 3          | `=`, `+=`, `-=` etc.      | Assignment      |
 
 #### 🔍 Example:
 
@@ -671,3 +1003,145 @@ JavaScript frequently uses:
 - `$dollar` prefix in libraries (like jQuery): `$`, `$element`
 
 ---
+
+## Output methods in JavaScript
+In JavaScript, there are several methods to **output data**. Here's a list of the most commonly used ones, depending on your context (web page, console, alert, etc.):
+
+### 🖥️ 1. `console.log()`
+
+- **Use**: Outputs to the browser's console (mainly for debugging).
+
+```javascript
+console.log("Hello, world!");
+```
+
+### 🗨️ 2. `alert()`
+
+- **Use**: Shows a popup alert box in the browser.
+
+```javascript
+alert("This is an alert box!");
+```
+
+### ✍️ 3. `document.write()`
+
+- **Use**: Writes directly to the HTML document. _Not recommended for modern use_ (especially after page load).
+    
+
+```javascript
+document.write("This is written to the page.");
+```
+
+### 📤 4. `innerHTML`
+
+- **Use**: Inserts content into an HTML element.
+
+```html
+<div id="output"></div>
+
+<script>
+  document.getElementById("output").innerHTML = "Output via innerHTML";
+</script>
+```
+
+### 📋 5. `window.prompt()`
+
+- **Use**: Outputs a message and takes user input.
+
+```javascript
+var name = prompt("Enter your name:");
+console.log("Hello, " + name);
+```
+
+### 📬 6. `confirm()`
+
+- **Use**: Shows a confirmation dialog with OK/Cancel.
+
+```javascript
+var result = confirm("Are you sure?");
+console.log(result);  // true or false
+```
+
+### 🧱 7. [[DOM]] manipulation methods (like `createElement`, `appendChild`)
+
+- **Use**: Dynamically creates and displays elements.
+
+```javascript
+let p = document.createElement("p");
+p.textContent = "This was created dynamically!";
+document.body.appendChild(p);
+```
+
+---
+
+## Conditional Statements in JavaScript
+Conditional statements **control the flow** of your program based on **conditions** (true/false values).
+
+### 1. `if` Statement
+Executes a block if the condition is true.
+
+```javascript
+let age = 20;
+
+if (age >= 18) {
+  console.log("You are an adult.");
+}
+```
+
+### 2. `if...else` Statement
+Adds an alternative if the condition is false.
+
+```javascript
+let age = 16;
+
+if (age >= 18) {
+  console.log("You can vote.");
+} else {
+  console.log("You are too young to vote.");
+}
+```
+
+### 3. `if...else if...else` Statement
+Tests multiple conditions in order.
+
+```javascript
+let score = 85;
+
+if (score >= 90) {
+  console.log("Grade: A");
+} else if (score >= 80) {
+  console.log("Grade: B");
+} else {
+  console.log("Grade: C or below");
+}
+```
+
+### 4. `switch` Statement
+Better for checking one variable against multiple exact values.
+
+```javascript
+let color = "blue";
+
+switch (color) {
+  case "red":
+    console.log("Color is red");
+    break;
+  case "blue":
+    console.log("Color is blue");
+    break;
+  default:
+    console.log("Unknown color");
+}
+```
+
+### 5. Ternary Operator (`? :`)
+A shorthand for simple `if...else`.
+
+```javascript
+let age = 18;
+let message = (age >= 18) ? "Adult" : "Minor";
+console.log(message);
+```
+
+---
+
