--- a/📔Notes/2. HTML Notes.md
+++ b/📔Notes/2. HTML Notes.md
@@ -315,7 +315,7 @@ You can also use numeric codes:
 
 - Decimal: `&#169;` (for ©)
 
-- [[Hexadecimal]]: `&#x00A9;` (for ©)
+- [[Hexadecimal Number System|Hexadecimal]]: `&#x00A9;` (for ©)
 
 ### When to Use
 
