--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -222,8 +222,8 @@ p {
 
 - When precise color matching isn't needed
 
-### 2. **[[Hexadecimal]] Colors**
-**Hex codes** represent colors using [[hexadecimal]] values (base-16). They begin with `#` and contain either **3** or **6** digits:
+### 2. **[[Hexadecimal Number System|Hexadecimal]] Colors**
+**Hex codes** represent colors using [[Hexadecimal Number System]] values (base-16). They begin with `#` and contain either **3** or **6** digits:
 
 #### ✅ Syntax:
 
