--- a/📔Notes/4. JavaScript Notes.md
+++ b/📔Notes/4. JavaScript Notes.md
@@ -194,17 +194,6 @@ If you need to work with very large integers beyond `2^53 - 1`:
 let big = 123456789012345678901234567890n;
 ```
 
-#### 📦 Math Object (for advanced math)
-
-```javascript
-Math.round(4.7);     // 5
-Math.floor(4.9);     // 4
-Math.ceil(4.1);      // 5
-Math.random();       // Random number (0–1)
-Math.pow(2, 3);      // 8
-Math.sqrt(16);       // 4
-```
-
 ---
 
 ### Booleans
@@ -629,6 +618,29 @@ let arr = [1, 2, 3];
 arr.reverse(); // [3, 2, 1]
 ```
 
+- `every()` - Checks if **all elements** in an array satisfy a given condition (returns `true` or `false`).
+	
+```js
+const numbers = [2, 4, 6, 8];
+const allEven = numbers.every(num => num % 2 === 0);
+console.log(allEven); // true
+```
+
+- `some()` - Checks if **at least one element** in the array satisfies the given condition.
+	
+```js
+const numbers = [1, 3, 5, 6];
+const hasEven = numbers.some(num => num % 2 === 0);
+console.log(hasEven); // true
+```
+
+	 Use Cases
+
+| Method  | When to Use                             | Result Interpretation                     |
+| ------- | --------------------------------------- | ----------------------------------------- |
+| `every` | Validate that **all items** meet a rule | Returns `true` only if all pass           |
+| `some`  | Check if **any item** meets a rule      | Returns `true` if **at least one** passes |
+
 #### Array References
 In JavaScript, arrays are **reference types**, which means when you assign an array to another variable or pass it into a function, you're passing a **reference to the same array in memory**, not a copy of the array.
 
@@ -769,6 +781,134 @@ console.log(flatAll); // [1, 2, 3, 4]
 - **Game Boards:** `board[y][x]`
 
 - **Hierarchical Data:** Nested lists or trees
+
+---
+
+### Object Literals
+In JavaScript, **object literals** are a way to create objects using a concise syntax. An object literal is a comma-separated list of key-value pairs enclosed in curly braces `{}`.
+
+#### Basic Syntax
+
+```javascript
+const person = {
+  name: "Alice",
+  age: 30,
+  isStudent: false
+};
+```
+
+- `name`, `age`, and `isStudent` are **keys** (also called properties).
+
+- `"Alice"`, `30`, and `false` are the corresponding **values**.
+
+#### Object Property Manipulation
+##### 🎯 **Accessing Object Properties**
+You can access properties using:
+
+- **Dot notation**:
+    
+```javascript
+console.log(person.name); // "Alice"
+```
+
+- **Bracket notation** (useful when the key is dynamic or not a valid identifier):
+    
+```javascript
+console.log(person["age"]); // 30
+```
+
+⭐⭐⭐<mark style="background: #ABF7F7A6;">Remember: </mark>⭐⭐⭐
+```javascript
+// Unusual keys and values
+const unusual = {
+	1: "a",
+	2: "b",
+	3: "c",
+	// 1null: "d", // throws error because, naming rules not followed
+	null: "no_value", // then it throws error!!
+	true: "truth",
+	const: "constant",
+	let: "variable",
+};
+console.log(unusual); // makes the keys a string.
+console.log(unusual.null);
+console.log(unusual[null]);
+
+console.log(unusual[true]); // first true converted to string then compared.
+// console.log(unusual[const]); // Why it throws error? = because it is a identifier and compiler thought you want to declare a variable
+console.log(unusual["const"]);
+
+// console.log(unusual.1); // throws error.
+console.log(unusual.null); // why this works but not 1? = because 1 is not valid identifier but null is.
+
+// Conclusion = valid identifiers, numbers, reserved keywords can be used a key (only, no naming rules should be broken) & on the other hand dot notation only handles valid identifiers and reserved keywords not numbers........ this is stupid!! It just shows the incompleteness of JS
+```
+
+##### ✍️ **Adding or Modifying Properties**
+
+```javascript
+person.job = "Developer";      // Add new property
+person.age = 31;               // Modify existing property
+```
+
+##### ➖ **Removing Properties**
+
+```javascript
+delete person.isStudent;
+```
+
+#### Multi level Objects
+##### 🔶 **Methods in Object Literals**
+You can include functions (methods) in objects:
+
+```javascript
+const calculator = {
+  add(a, b) {
+    return a + b;
+  }
+};
+
+console.log(calculator.add(2, 3)); // 5
+```
+
+##### 🔶 **Nested Objects**
+
+```javascript
+const user = {
+  name: "Bob",
+  address: {
+    city: "New York",
+    zip: "10001"
+  }
+};
+
+console.log(user.address.city); // "New York"
+```
+
+##### 🔶 **Array of Objects**
+```javascript
+Const users = [
+  { name: "Alice", age: 25 },
+  { name: "Bob", age: 30 },
+  { name: "Charlie", age: 22 }
+];
+
+console.log(users[0].name); // "Alice"
+console.log(users[2].age);  // 22
+```
+
+#### Dynamic Property Names
+
+You can use **computed property names**:
+
+```javascript
+const key = "score";
+const game = {
+  [key]: 100
+};
+
+console.log(game.score); // 100
+```
 
 ---
 
@@ -1142,6 +1282,1276 @@ let age = 18;
 let message = (age >= 18) ? "Adult" : "Minor";
 console.log(message);
 ```
+
+---
+
+## Loops in JavaScript
+Loops in JavaScript allow you to execute a block of code repeatedly, based on a condition. Here’s a breakdown of the main types of loops in JavaScript:
+
+### For Loops
+**For loops** are the most **common** type of loops.
+#### 🔁 Basic `for` Loop Syntax
+
+```javascript
+for (initialization; condition; increment) {
+	// code to execute 
+}
+```
+
+- **`initialization`** – runs once before the loop starts (usually used to declare a counter variable).
+
+- **`condition`** – the loop runs **while this condition is true**.
+
+- **`increment`** – runs **after each iteration**.
+
+#### ✅ Example
+
+```javascript
+for (let i = 0; i <= 5; i++) {   
+	console.log(i); 
+}
+```
+
+📤 Output:
+
+```
+1
+2
+3
+4
+5
+```
+
+### While Loops
+A **while loop** repeatedly executes a block of code **as long as a specified condition is `true`**.
+
+#### 🔁 Basic `while` Loop Syntax
+
+```javascript
+while (condition) {
+  // code block to be executed
+}
+```
+
+- The condition is checked **before** the code block runs.
+
+- If the condition is `false`, the loop **does not run at all**.
+
+#### ✅ Example
+
+```javascript
+let i = 1;
+while (i <= 5) {
+  console.log(i);
+  i++;
+}
+```
+
+📤 Output:
+
+```
+1
+2
+3
+4
+5
+```
+
+### For... Of Loops
+The `for...of` loop is used to **iterate over iterate-able objects** like:
+
+- Arrays
+
+- Strings
+
+- Maps
+
+- Sets
+
+- [[DOM]] NodeLists, etc.
+
+#### 🔁 Basic `for...of` Loop Syntax
+
+```javascript
+for (const element of iterable) {
+  // code to execute
+}
+```
+
+#### ✅ Example: Loop Through an Array
+
+```javascript
+const fruits = ['apple', 'banana', 'cherry'];
+
+for (const fruit of fruits) {
+  console.log(fruit);
+}
+```
+
+📤 Output:
+
+```
+apple
+banana
+cherry
+```
+
+### For... In Loops
+The `for...in` loop is used to **iterate over the enumerable properties (keys)** of an object.
+
+#### 🔁 Basic `for...in` Loop Syntax
+
+```javascript
+for (const key in object) {
+  // code to execute
+}
+```
+
+- Iterates over all **enumerable string keys** in an object (including inherited properties if not filtered).
+
+#### ✅ Example: Loop Through an Object
+
+```javascript
+const person = {
+  name: "Alice",
+  age: 30,
+  job: "Developer"
+};
+
+for (const key in person) {
+  console.log(`${key}: ${person[key]}`);
+}
+```
+
+📤 Output:
+
+```
+name: Alice
+age: 30
+job: Developer
+```
+
+#### ⚠️ `for...in` with Arrays – Be Careful
+
+```javascript
+const colors = ['red', 'green', 'blue'];
+
+for (const index in colors) {
+  console.log(index, colors[index]);
+}
+```
+
+📤 Output:
+
+```
+0 red
+1 green
+2 blue
+```
+
+- This **loops over indices**, not values.
+
+- Use `for...of` for array **values** instead.
+
+#### 🛑 Inherited Properties Warning
+`for...in` will also iterate over **inherited properties**, unless you filter them:
+
+```javascript
+const obj = Object.create({ inherited: true });
+obj.own = 'yes';
+
+for (const key in obj) {
+  if (obj.hasOwnProperty(key)) {
+    console.log(key); // only "own"
+  }
+}
+```
+
+#### ✅ Use Cases
+
+- Best for looping through **object properties**
+
+- Avoid for arrays unless you need **indices** (use `for` or `for...of` for values)
+
+
+### `do...while` Loop in JavaScript
+The `do...while` loop is similar to a `while` loop, **but it always executes the code block at least once**, **before** checking the condition.
+
+#### 🔁 Basic `do...while` Loop Syntax
+
+```javascript
+do {
+  // code block to execute
+} while (condition);
+```
+
+- The block runs **once before** the condition is checked.
+
+- If the condition is true, it runs again—and repeats until the condition is false.
+
+#### ✅ Example
+
+```javascript
+let i = 1;
+
+do {
+  console.log(i);
+  i++;
+} while (i <= 5);
+```
+
+📤 Output:
+
+```
+1
+2
+3
+4
+5
+```
+
+#### ✅ When to Use `do...while`:
+
+- Use when the **code should run at least once**, even if the condition is initially false.
+
+- Input validation loops (run at least once)
+
+- Menus or retry systems
+
+- Scenarios where action must happen before the condition is meaningful
+
+
+### `break` and `continue` in JavaScript Loops
+These are **control flow statements** that help you manage how loops behave.
+
+#### 🔓 `break` – **Exits** the Loop Immediately
+When JavaScript encounters a `break` statement inside a loop, it **stops** the loop right there and jumps to the next line **after** the loop.
+
+✅ Example:
+
+```javascript
+for (let i = 1; i <= 5; i++) {
+  if (i === 3) break;
+  console.log(i);
+}
+```
+
+📤 Output:
+
+```
+1
+2
+```
+
+#### ⏭️ `continue` – **Skips** to the Next Iteration
+When JavaScript encounters `continue`, it **skips the rest of the current iteration** and jumps back to the loop condition for the next cycle.
+
+✅ Example:
+
+```javascript
+for (let i = 1; i <= 5; i++) {
+  if (i === 3) continue;
+  console.log(i);
+}
+```
+
+📤 Output:
+
+```
+1
+2
+4
+5
+```
+
+#### ⚠️ Tip
+
+Using `break` or `continue` too much can make your code harder to read. Use them when:
+
+- `break`: You want to stop the loop based on a condition.
+
+- `continue`: You want to skip specific values or cases.
+
+---
+
+## Math Methods in JavaScript (`Math` Object)
+JavaScript provides a built-in `Math` object with **properties and methods** for performing mathematical tasks.
+
+### 📌 Most-Used `Math` Methods
+
+|Method|Description|Example|Result|
+|---|---|---|---|
+|`Math.abs(x)`|Returns absolute value|`Math.abs(-7)`|`7`|
+|`Math.ceil(x)`|Rounds **up** to the nearest integer|`Math.ceil(4.2)`|`5`|
+|`Math.floor(x)`|Rounds **down** to the nearest integer|`Math.floor(4.9)`|`4`|
+|`Math.round(x)`|Rounds to the **nearest** integer|`Math.round(4.5)`|`5`|
+|`Math.trunc(x)`|Removes decimal part (no rounding)|`Math.trunc(4.9)`|`4`|
+|`Math.max(...values)`|Returns the **largest** number|`Math.max(3, 5, 1)`|`5`|
+|`Math.min(...values)`|Returns the **smallest** number|`Math.min(3, 5, 1)`|`1`|
+|`Math.sqrt(x)`|Square root|`Math.sqrt(16)`|`4`|
+|`Math.pow(x, y)`|`x` to the power of `y`|`Math.pow(2, 3)`|`8`|
+|`Math.random()`|Random number between `0` and `1`|—|e.g. `0.7356`|
+|`Math.PI`|π constant|`Math.PI`|`3.14159...`|
+
+### 📐 More Advanced
+
+| Method                                        | Description                                       |
+| --------------------------------------------- | ------------------------------------------------- |
+| `Math.sin(x)` / `Math.cos(x)` / `Math.tan(x)` | Trigonometric functions (in radians)              |
+| `Math.log(x)`                                 | Natural logarithm (base **e**)                    |
+| `Math.log10(x)`                               | Log base 10                                       |
+| `Math.exp(x)`                                 | Exponential function, returns `e^x`               |
+| `Math.cbrt(x)`                                | Cube root                                         |
+| `Math.hypot(a, b)`                            | Returns √(a² + b²) (like the Pythagorean theorem) |
+
+### 🍀 Generating Random Number
+
+``` javascript
+// Generate a random number in between [0,1)
+console.log(Math.random()); 
+
+// Generate a random integer in between [1, 10]
+console.log(Math.floor(Math.random() * 10) + 1); 
+
+// General formula
+Math.floor(Math.random() * (max -min + 1)) + min
+```
+
+---
+
+## Functions in JavaScript
+A **function** is a reusable block of code that performs a specific task.
+
+Think of it like a **tool** in a toolbox: when you need to perform a task (e.g., calculate a number, fetch data, modify an object), you use that tool.
+
+### Syntax:
+
+```js
+function functionName(parameters) {
+  // code to execute
+  return result; // optional
+}
+```
+
+### Function Types in JavaScript
+
+#### A. Function Declaration
+
+```js
+function greet(name) {
+  return `Hello, ${name}`;
+}
+```
+
+- **Hoisted**: Can be used before it's defined in the code.
+
+#### B. Function Expression
+
+```js
+const greet = function(name) {
+  return `Hello, ${name}`;
+};
+```
+
+- Not hoisted. Safer in larger apps due to scope clarity.
+
+#### C. Arrow Function (ES6+)
+
+```js
+const greet = (name) => `Hello, ${name}`;
+```
+
+- Shorter syntax.
+
+- Doesn’t have its own `this`, `arguments`, or `super`.
+
+- Great for **callbacks**, **array methods**, and **functional programming**.
+
+### Parameters vs Arguments
+
+```js
+function sum(a, b) {
+  return a + b; // 'a' and 'b' are parameters
+}
+
+sum(5, 10); // 5 and 10 are arguments
+```
+
+#### 🔹Default Parameters
+
+```js
+function greet(name = "Guest") {
+  return `Hello, ${name}`;
+}
+```
+
+#### 🔹Rest Parameters & Spread Syntax
+
+```js
+function sumAll(...nums) {
+  return nums.reduce((acc, val) => acc + val, 0);
+}
+sumAll(1, 2, 3, 4); // 10
+```
+
+### Callback Functions
+
+> A function passed as an argument to another function.
+
+```js
+function fetchData(callback) {
+  setTimeout(() => {
+    callback("Data loaded");
+  }, 1000);
+}
+
+fetchData((data) => console.log(data)); // "Data loaded"
+```
+
+### Anonymous Functions
+
+> Functions without a name (often used inline).
+
+```js
+setTimeout(function () {
+  console.log("Executed after 1 second");
+}, 1000);
+```
+
+### IIFE (Immediately Invoked Function Expression)
+Executes **immediately** after creation. Good for **isolated scope**, often used in **modular design**.
+
+```js
+(function() {
+  console.log("This runs immediately");
+})();
+```
+
+### Higher-Order Functions (HOFs)
+
+> Functions that **take other functions** as arguments or **return functions**.
+
+```js
+function multiply(factor) {
+  return function(num) {
+    return num * factor;
+  };
+}
+
+const double = multiply(2);
+console.log(double(5)); // 10
+```
+
+This is where **JavaScript power** really shines — used heavily in frameworks, FP (Functional Programming), and more.
+
+### Closures
+
+A function that **remembers** its lexical scope, even when the outer function has finished execution.
+
+```js
+function outer() {
+  let count = 0;
+  return function() {
+    count++;
+    return count;
+  };
+}
+
+const counter = outer();
+console.log(counter()); // 1
+console.log(counter()); // 2
+```
+
+Use cases:
+
+- Data encapsulation
+
+- Private variables
+
+- Functional state
+
+### Async Functions
+Used with `await`, makes asynchronous code **clean and readable**.
+
+```js
+async function fetchUser() {
+  const response = await fetch("https://api.example.com/user");
+  const user = await response.json();
+  return user;
+}
+```
+
+### Methods
+**Methods** are nothing but **functions in an object literal**.
+
+```js
+const Calculator = {
+	add: function (a, b) { // Functions inside objects call method
+		return a + b;
+	},
+	sub: function (a, b) {
+		return a - b;
+	},
+	mul(a, b) { // Shorthand to create method	
+		return a * b;
+	},
+	div(a, b) {
+		return a / b;
+	},
+};
+
+console.log(Calculator.add(2, 3));
+
+console.log(Calculator.sub(60, 20));
+
+console.log(Calculator.mul(3, 6));
+
+console.log(Calculator.div(5, 2));
+
+```
+
+### SetTimeout function
+The `setTimeout()` function in JavaScript is used to **execute a piece of code after a specified delay** (in milliseconds). It’s part of the **Web APIs**, provided by the browser environment, not the core JavaScript language itself.
+#### 🔧 Syntax:
+
+```javascript
+setTimeout(callback, delay, ...args);
+```
+
+- `callback` – The function to execute after the delay.
+
+- `delay` – Time to wait before executing the function (in **milliseconds**).
+
+- `...args` – Optional arguments to pass to the callback function.
+
+---
+
+#### ✅ Example:
+
+```javascript
+console.log("Start");
+
+setTimeout(() => {
+  console.log("This runs after 2 seconds");
+}, 2000);
+
+console.log("End");
+```
+
+Output:
+
+```
+Start
+End
+This runs after 2 seconds
+```
+
+🔍 **Explanation**:  
+JavaScript is non-blocking and asynchronous. So even though you set a timeout, the rest of the code continues executing without waiting.
+
+#### ⛔ Clearing a Timeout
+You can cancel a timeout using `clearTimeout()` if it hasn’t fired yet.
+
+```javascript
+const id = setTimeout(() => {
+  console.log("This won't run");
+}, 3000);
+
+clearTimeout(id);
+```
+
+### SetInterval function
+The `setInterval` function in JavaScript is used to **repeatedly execute a function at specified time intervals** (in milliseconds). It's part of the Web APIs provided by browsers and also available in Node.js.
+
+#### 🔧 Syntax:
+
+```javascript
+let intervalID = setInterval(function, delay, param1, param2, ...);
+```
+
+- `function` – The function to be executed.
+
+- `delay` – Time in **milliseconds** between executions.
+
+- `param1, param2, ...` – Optional parameters passed to the function.
+
+#### ⛔ Stopping `setInterval`:
+
+Use `clearInterval(intervalID)` where `intervalID` is the identifier returned by `setInterval`.
+
+#### ⚠️ Warning:
+
+- **setInterval is not precise**. It doesn't guarantee exact timing due to event loop delays. If the callback takes longer than the interval, delays stack up.
+
+- **Memory leaks**: Forgetting `clearInterval()` leads to infinite loops and memory issues in long-running apps.
+
+###  Bonus: setTimeout vs setInterval
+
+|Feature|`setTimeout()`|`setInterval()`|
+|---|---|---|
+|Runs after|One-time delay|Repeats at every interval|
+|Can be recursive|Yes (by calling it again)|No (needs `clearInterval`)|
+|Control|More control with recursion|Harder to manage dynamically|
+
+---
+
+## Scope in JavaScript
+**Scope** in JavaScript determines **where a variable is accessible** — like where it's "visible" or "reachable" in your code.
+
+### 📦 Think of it like containers:
+
+- Imagine each function or block is a box 📦.
+
+- Variables declared inside a box **stay in that box** unless explicitly passed out.
+
+- You can **see inside your own box** and the outer ones, but **not inside other boxes**.
+
+### 1. Global Scope
+
+```js
+let name = "Sankha"; // global
+
+function greet() {
+  console.log("Hi " + name); // can access global
+}
+
+greet(); // Hi Sankha
+```
+
+- `name` is global, available _anywhere_ in your code.
+
+- Be careful! Global variables stay in memory until the page is closed.
+
+### 2. Function Scope
+
+```js
+function showAge() {
+  let age = 21; // function-scoped
+  console.log("Age is", age);
+}
+
+showAge();
+// console.log(age); ❌ Error: age is not defined
+```
+
+- `age` exists **only inside** `showAge()`
+
+- Try to access it outside? 💥 Boom, it's undefined.
+
+### 3. Block Scope (with `let` & `const` only)
+
+```js
+if (true) {
+  let hobby = "coding";  // block-scoped
+  const mood = "focused";
+  console.log(hobby); // coding
+}
+
+console.log(hobby); // ❌ Error: hobby is not defined
+```
+
+- `var` does **not** follow block scope — only `let` and `const` do.
+
+#### ⚠️ Important Behavior: `var` vs `let` / `const`
+
+```js
+if (true) {
+  var x = 5;
+  let y = 10;
+}
+
+console.log(x); // ✅ 5
+console.log(y); // ❌ ReferenceError
+```
+
+- `var` is **function-scoped**, not block-scoped.
+
+- `let` and `const` are **block-scoped**, safer to use in modern JS.
+
+### 4.Lexical Scope
+ Lexical scope means **the accessibility of variables is determined by where you write your code (at _definition time_)**, _not where you call it (at runtime)_.
+
+In plain words:
+
+- JS **reads your code from top to bottom**, and **decides the scope tree** before the program even runs.
+
+- Inner functions have access to variables in the outer scopes **where they are written**, _regardless of where they're called later._
+
+```js
+function outer() {
+  let name = "Sankha";
+
+  function inner() {
+    console.log(name); // ✅ has access
+  }
+
+  inner();
+}
+```
+
+Here, `inner()` can access `name` **because it's lexically inside `outer()`**.
+
+#### ⚠️ But Watch This:
+
+```js
+function outer() {
+  let secret = "hidden";
+  return inner;
+}
+
+function inner() {
+  console.log(secret); // ❌ ReferenceError: secret is not defined
+}
+
+outer()(); // 💥 BOOM
+```
+
+Why? Because `inner` was **not written inside `outer`**, so it doesn’t have access to `outer`'s scope.  
+Even though it's **called from `outer()`**, that doesn't matter.
+
+**Lexical scope is about where it was written, not where it's called.**
+
+### 🎯 How Scope Works in Layers
+
+```js
+let outer = "I’m global";
+
+function outerFunc() {
+  let inner = "I’m inside outerFunc";
+
+  function innerFunc() {
+    let deep = "I’m deep inside";
+    console.log(outer); // ✅ I’m global
+    console.log(inner); // ✅ I’m inside outerFunc
+    console.log(deep);  // ✅ I’m deep inside
+  }
+
+  innerFunc();
+  console.log(deep); // ❌ Error: deep is not defined
+}
+
+outerFunc();
+```
+
+- Inner scopes can **access outer scopes**, but **not the other way around**.
+
+---
+
+Alright Sankha, let's talk **hoisting** — a fundamental yet often confusing concept in **JavaScript**. You _must_ understand this thoroughly if you're serious about mastering JS. So buckle in.
+
+---
+
+## Hoisting in JavaScript
+**Hoisting** is JavaScript's default behavior of **moving declarations to the top** of the current scope (either global or function scope) **during the compilation phase**.
+
+In simpler terms:
+
+> JavaScript **scans** your code before it actually runs it, and **pulls all variable and function declarations** to the **top** of their scope.
+
+### But Be Careful — Not Everything is Hoisted Equally
+
+#### 1. `var` is Hoisted (But Only the Declaration)
+
+```js
+console.log(a); // undefined
+var a = 5;
+console.log(a); // 5
+```
+
+What actually happens behind the scenes:
+
+```js
+var a;         // hoisted declaration
+console.log(a); // undefined
+a = 5;          // assignment stays in place
+console.log(a); // 5
+```
+
+🧨 So you don’t get an error… but you don’t get the value either. You get `undefined`.
+
+#### 2. `let` and `const` are Hoisted Too — BUT...
+They are hoisted to the top of the block **but not initialized**. This leads to a **Temporal Dead Zone (TDZ)**.
+
+```js
+console.log(b); // ❌ ReferenceError
+let b = 10;
+```
+
+So unlike `var`, you can't use `let` or `const` **before** their declaration line.
+
+Why? Because they are in a "dead zone" from the start of the scope until their declaration is reached.
+
+#### 3. Function Declarations Are Fully Hoisted
+
+```js
+sayHello(); // ✅ Works!
+
+function sayHello() {
+  console.log("Hi Sankha!");
+}
+```
+
+Here, the **entire function** is hoisted, not just the name.
+
+BUT:
+
+##### ⚠️ **Function Expressions Are NOT Hoisted**
+
+```js
+sayHi(); // ❌ TypeError: sayHi is not a function
+
+var sayHi = function () {
+  console.log("Hi again!");
+};
+```
+
+Only the **`var sayHi`** part is hoisted, which becomes `undefined` initially — not the function.
+
+Same applies to `let` or `const` function expressions. They fall into the TDZ and throw `ReferenceError`.
+
+---
+
+## Try & Catch in JavaScript
+In JavaScript, `try...catch` is used for **error handling**. It allows you to test a block of code (`try`) for errors, and if an error occurs, handle it in the `catch` block instead of letting the program crash.
+
+### 🔧 Syntax:
+
+```javascript
+try {
+  // Code that might throw an error
+} catch (error) {
+  // Code to handle the error
+}
+```
+
+### ✅ Optional `finally` Block
+
+```javascript
+try {
+  // Code that might throw an error
+} catch (error) {
+  // Handle the error
+} finally {
+  // Code that will always run, regardless of an error
+}
+```
+
+### 🧠 Example:
+
+```javascript
+try {
+  let result = riskyFunction();
+  console.log("Result:", result);
+} catch (err) {
+  console.error("Something went wrong:", err.message);
+} finally {
+  console.log("This will always run.");
+}
+```
+
+### 👀 Notes:
+
+- Only **runtime errors** (not syntax errors) can be caught.
+
+- The `error` object in `catch(error)` contains info about the error (like `error.name`, `error.message`, `error.stack`).
+
+- `try...catch` works **synchronously**; to catch async errors, use `.catch()` with Promises or `try...catch` inside `async/await` functions.
+
+### 🔄 Example with `async/await`:
+
+```javascript
+async function fetchData() {
+  try {
+    let response = await fetch("https://api.example.com/data");
+    let data = await response.json();
+    console.log(data);
+  } catch (error) {
+    console.error("Failed to fetch data:", error);
+  }
+}
+```
+
+---
+
+## This keyword in JavaScript
+In JavaScript, the `this` keyword refers to the **context in which a function is called**. Its value depends on **how** the function is invoked, and it can be tricky because it changes depending on the situation.
+
+### Common `this` Scenarios
+
+#### 1. Global Context
+
+```javascript
+console.log(this); // In browsers, this is the `window` object
+```
+
+#### 2. Inside a Function (Non-strict mode)
+
+```javascript
+function show() {
+  console.log(this);
+}
+show(); // `this` is the global object (`window` in browsers)
+```
+
+#### 3. Inside a Method (Object Context)
+
+```javascript
+const user = {
+  name: "Alice",
+  greet() {
+    console.log(this.name);
+  }
+};
+user.greet(); // `this` refers to `user`
+```
+
+#### 4. Arrow Functions
+Arrow functions **do not have their own `this`**. They inherit it from the enclosing (lexical) scope.
+
+```javascript
+const user = {
+  name: "Bob",
+  greet: () => {
+    console.log(this.name);
+  }
+};
+user.greet(); // `this` is not `user`, it's the outer (global) `this`
+```
+
+#### 5. Inside Classes
+
+```javascript
+class Person {
+  constructor(name) {
+    this.name = name;
+  }
+  greet() {
+    console.log(`Hello, ${this.name}`);
+  }
+}
+const p = new Person("Eve");
+p.greet(); // this → instance of Person
+```
+
+#### 6. Using `bind`, `call`, and `apply`
+
+```javascript
+function greet() {
+  console.log(this.name);
+}
+const person = { name: "Dave" };
+
+greet.call(person);  // Dave
+greet.apply(person); // Dave
+const boundGreet = greet.bind(person);
+boundGreet();        // Dave
+```
+
+### Summary
+
+|Context|`this` refers to|
+|---|---|
+|Global scope|`window` (browser) or `global` (Node.js)|
+|Object method|The object itself|
+|Arrow function|Inherits `this` from surrounding context|
+|Class method|The instance of the class|
+|`bind` / `call` / `apply`|Explicitly defined object|
+
+---
+
+## Spread & Rest in JavaScript
+
+### Spread
+
+#### What is the Spread Syntax?
+**Spread (`...`)** expands:
+
+- Arrays
+
+- Objects
+
+- Iterables (like Sets, Strings, Maps)  
+    into individual elements or properties.
+
+#### Spread with Arrays
+
+##### ✅ Copying an Array
+
+```js
+const nums = [1, 2, 3];
+const copy = [...nums]; // [1, 2, 3]
+```
+
+> _Creates a shallow copy (not deep)._
+
+##### ✅ Merging Arrays
+
+```js
+const arr1 = [1, 2];
+const arr2 = [3, 4];
+const merged = [...arr1, ...arr2]; // [1, 2, 3, 4]
+```
+
+##### ✅ Spreading into Function Arguments
+
+```js
+function add(a, b, c) {
+  return a + b + c;
+}
+
+const values = [1, 2, 3];
+console.log(add(...values)); // 6
+```
+
+##### ✅ Spreading Strings (turns into array of characters)
+
+```js
+const word = "hello";
+const letters = [...word]; // ['h', 'e', 'l', 'l', 'o']
+```
+
+#### Spread with Objects
+
+##### ✅ Cloning an Object
+
+```js
+const user = { name: "Alice", age: 25 };
+const clone = { ...user }; // { name: "Alice", age: 25 }
+```
+
+##### ✅ Merging Objects
+
+```js
+const defaults = { theme: "dark", font: "Arial" };
+const settings = { font: "Roboto", layout: "grid" };
+
+const final = { ...defaults, ...settings };
+// { theme: "dark", font: "Roboto", layout: "grid" }
+```
+
+> _Right-most object overwrites previous values._
+
+#### Limitations & Caveats
+
+- Spread only performs a **shallow copy**.
+	
+```js
+const original = { a: 1, b: { c: 2 } };
+onst copy = { ...original };
+copy.b.c = 99; // changes original.b.c too
+```
+
+- Can’t spread **non-iterables** (e.g., numbers or objects in arrays directly).
+
+- Can't spread into **constructor arguments** unless using `apply()` or modern class spreading patterns.
+
+#### Summary
+
+| Feature       | Spread Use Case Example         |
+| ------------- | ------------------------------- |
+| Copy array    | `const copy = [...array]`       |
+| Merge arrays  | `const combined = [...a, ...b]` |
+| Spread string | `const chars = [..."text"]`     |
+| Clone object  | `const newObj = { ...obj }`     |
+| Merge objects | `const result = { ...a, ...b }` |
+| Function args | `func(...argsArray)`            |
+
+### Rest in JavaScript
+
+#### What is Rest?
+**Rest syntax** uses `...` to **gather** remaining elements/args/properties into a new array or object.
+
+Think:
+ 
+ - **Spread** = “explode”
+
+ - **Rest** = “gather”
+
+#### Rest in Function Parameters
+
+##### ✅ Capture Unlimited Arguments
+
+```js
+function logAll(...args) {
+  console.log(args);
+}
+
+logAll(1, 2, 3); // [1, 2, 3]
+```
+
+> `args` becomes a real array (not `arguments` object).
+
+##### ✅ With Named Params
+
+```js
+function greet(first, ...others) {
+  console.log(first);  // 'Hello'
+  console.log(others); // ['World', '!']
+}
+
+greet('Hello', 'World', '!'); 
+```
+
+
+#### Important Rules
+
+- **Only one** rest element is allowed.
+
+- Must be the **last** in parameter/destructuring list.
+	
+```js
+function wrong(...args, x) {} // ❌ SyntaxError
+```
+
+#### Use Cases
+
+| Use Case                         | Rest Syntax Example                   |
+| -------------------------------- | ------------------------------------- |
+| Unlimited function arguments     | `function sum(...nums)`               |
+| Array destructuring (skip first) | `const [_, ...rest] = arr`            |
+| Object property separation       | `const {id, ...others} = obj`         |
+| Custom wrapper over functions    | `(...args) => func.apply(null, args)` |
+
+#### Don’t Confuse Rest vs Spread
+
+|Feature|Role|Example|
+|---|---|---|
+|Rest|Gather items|`function f(...args) {}`|
+|Spread|Expand items|`f(...[1, 2, 3])`|
+
+#### Summary
+
+- **Rest = collect multiple elements into one**.
+
+- Use it in:
+    
+    - Function parameters
+    
+    - Array/object destructuring
+    
+- It’s a tool for **flexibility**, **clean syntax**, and **modularity**.
+
+---
+
+## Destructuring in JavaScript
+
+### What Is Destructuring?
+**Destructuring** means extracting values from arrays or properties from objects and assigning them to variables using a concise syntax.
+
+> TL;DR: Break down data structures into variables — clean and fast.
+
+### Array Destructuring
+
+#### ✅ Basic Usage
+
+```js
+const arr = [10, 20, 30];
+const [a, b, c] = arr;
+
+console.log(a); // 10
+console.log(b); // 20
+```
+
+#### ✅ Skip Items
+
+```js
+const [x, , z] = [1, 2, 3];
+console.log(z); // 3
+```
+
+#### ✅ Use with Rest
+
+```js
+const [first, ...rest] = [1, 2, 3, 4];
+console.log(first); // 1
+console.log(rest);  // [2, 3, 4]
+```
+
+#### ✅ Set Defaults
+
+```js
+const [a = 1, b = 2] = [];
+console.log(a, b); // 1 2
+```
+
+### Object Destructuring
+
+#### ✅ Basic Usage
+
+```js
+const user = { name: "Sankho", age: 21 };
+const { name, age } = user;
+console.log(name); // 'Sankho'
+```
+
+#### ✅ Rename Variables
+
+```js
+const { name: userName, age: userAge } = user;
+console.log(userName); // 'Sankho'
+```
+
+#### ✅ Set Defaults
+
+```js
+const { role = "user" } = user;
+console.log(role); // 'user'
+```
+
+#### ✅ Nested Destructuring
+
+```js
+const user = {
+  name: "Sankho",
+  address: {
+    city: "Delhi",
+    zip: 12345,
+  },
+};
+
+const {
+  address: { city },
+} = user;
+console.log(city); // 'Delhi'
+```
+
+### Destructuring in Function Parameters
+
+#### ✅ Object Params
+
+```js
+function greet({ name, age }) {
+  console.log(`Hello ${name}, you are ${age}`);
+}
+
+greet({ name: "Sankho", age: 21 });
+```
+
+#### ✅ Array Params
+
+```js
+function sum([a, b]) {
+  return a + b;
+}
+console.log(sum([5, 7])); // 12
+```
+
+### Gotchas
+
+- **Order matters in arrays**, not in objects.
+
+- For **nested values**, destructure safely — use optional chaining or defaults to avoid `undefined`.
+
+- **Deep nested destructuring** can kill readability. Know when to stop.
+
+### When to Use
+
+|Situation|Use Destructuring?|
+|---|---|
+|Pulling multiple values from obj|✅ Yes|
+|Handling function params|✅ Yes|
+|Deep destructuring|⚠️ With caution|
+|One or two properties only|🤷‍♂️ Up to you|
 
 ---
 
